--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,9 @@
 * {
   margin: 0px;
   padding: 0px;
-  border: 1px solid black;
+}
+body {
+  background-color: rgba(13, 17, 23, 0.75);
 }
 
 .calc {
@@ -19,7 +21,7 @@
 .container {
   height: 550px;
   width: 350px;
-  background-color: rgb(96, 144, 172);
+  background-color: #1f2937;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -32,11 +34,11 @@
   flex-direction: column;
   align-items: flex-end;
   justify-content: space-evenly;
-  background-color: var(--main-color);
+  background-color: #bfbfbf;
   width: 300px;
   height: 110px;
   margin: 15px 5px;
-  font-size: 2rem;
+  font-size: 2.5rem;
   border-radius: 0.3rem;
 }
 
@@ -52,6 +54,8 @@
 }
 
 button {
+  color: #374151;
+  background-color: #d1d5db;
   height: 60px;
   width: 60px;
   font-size: 1.3rem;
@@ -62,4 +66,8 @@ button {
 
 .bigbutt {
   width: 140px;
+}
+
+button:hover {
+  background-color: hsl(216, 12%, 67%);
 }
